--- a/package.json
+++ b/package.json
@@ -13,9 +13,14 @@
     "@nuxt/eslint": "1.2.0",
     "@nuxt/icon": "1.11.0",
     "@nuxt/image": "1.10.0",
+    "@types/bun": "^1.2.8",
+    "better-sqlite3": "^11.9.1",
     "eslint": "^9.0.0",
     "nuxt": "^3.16.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
+  },
+  "devDependencies": {
+    "@types/better-sqlite3": "^7.6.12"
   }
 }
