--- a/package.json
+++ b/package.json
@@ -1,26 +1,28 @@
 {
   "name": "nuxt-app",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
-  },
   "dependencies": {
+    "@libsql/client": "^0.15.2",
     "@nuxt/eslint": "1.2.0",
     "@nuxt/icon": "1.11.0",
     "@nuxt/image": "1.10.0",
     "@types/bun": "^1.2.8",
-    "better-sqlite3": "^11.9.1",
+    "drizzle-orm": "^0.41.0",
     "eslint": "^9.0.0",
     "nuxt": "^3.16.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
+  "private": true,
+  "scripts": {
+    "build": "nuxt build",
+    "dev": "nuxt dev",
+    "generate": "nuxt generate",
+    "preview": "nuxt preview",
+    "postinstall": "nuxt prepare",
+    "migrate": "npx drizzle-kit push"
+  },
+  "type": "module",
   "devDependencies": {
-    "@types/better-sqlite3": "^7.6.12"
+    "drizzle-kit": "^0.30.6"
   }
 }
