--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@nuxt/icon": "1.11.0",
     "@nuxt/image": "1.10.0",
     "@types/bun": "^1.2.8",
+    "@vuestic/nuxt": "^1.0.21",
     "drizzle-orm": "^0.41.0",
     "eslint": "^9.0.0",
     "nuxt": "^3.16.1",
