--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
     "@nuxt/eslint": "1.2.0",
     "@nuxt/icon": "1.11.0",
     "@nuxt/image": "1.10.0",
+    "@pinia/nuxt": "^0.10.1",
     "@types/bun": "^1.2.8",
     "@vuestic/nuxt": "^1.0.21",
     "drizzle-orm": "^0.41.0",
     "eslint": "^9.0.0",
     "nuxt": "^3.16.1",
+    "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
